[package]
name = "bytejack_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgrx-pg-sys = { path = "pgrx-pg-sys", default-features=false, features=["cpg15"] }
pgrx = { path = "pgrx", default-features = false, features=["cpg15"] }

once_cell = "1.18.0" # polyfill until std::lazy::OnceCell stabilizes
seq-macro = "0.3" # impls loops in macros
uuid = { version = "1.4.1", features = [ "v4" ] } # PgLwLock and shmem
enum-map = "2.6.3"
thiserror = "1.0"
atomic-traits = "0.3.0" # PgAtomic and shmem init
bitflags = "2.4.0" # BackgroundWorker
bitvec = "1.0" # processing array nullbitmaps
heapless = "0.7.16" # shmem and PgLwLock
libc = "0.2.149" # FFI type compat
seahash = "4.1.0" # derive(PostgresHash)
serde = { version = "1.0", features = [ "derive" ] } # impls on pub types
serde_cbor = "0.11.2" # derive(PostgresType)
serde_json = "1.0" # everything JSON

redis = "*"
welford = "0.1.0"


[lib]
crate-type = ["staticlib"]
